{
  "sourceLanguage" : "en",
  "strings" : {
    "%@" : {

    },
    "Add" : {

    },
    "Add Book" : {

    },
    "Add books using the + button." : {

    },
    "Add Feed" : {

    },
    "Add feeds using the + button." : {

    },
    "Add from File" : {

    },
    "Add from URL" : {

    },
    "Add Note to Highlight" : {

    },
    "Appearance" : {

    },
    "Are you sure you want to delete '%@'?" : {

    },
    "Are you sure you want to delete '%@'? This cannot be undone." : {

    },
    "Are you sure you want to delete these %lld feeds?" : {

    },
    "Audio Preferences" : {

    },
    "Audiobook" : {

    },
    "Author" : {

    },
    "Book" : {

    },
    "Bookmark Saved" : {

    },
    "Bookmarks" : {

    },
    "Cancel" : {

    },
    "Chapter %lld: %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Chapter %1$lld: %2$@"
          }
        }
      }
    },
    "Close" : {

    },
    "Contents" : {

    },
    "Dark" : {

    },
    "Default" : {

    },
    "Delete" : {

    },
    "Delete Book?" : {

    },
    "Delete Feed?" : {

    },
    "Details" : {

    },
    "Done" : {

    },
    "Download" : {

    },
    "Download Error" : {

    },
    "Download Failed" : {

    },
    "Downloaded" : {

    },
    "Downloading..." : {

    },
    "Edit" : {

    },
    "Edit Feed" : {

    },
    "Enter text to search contents." : {

    },
    "Enter the direct URL to an EPUB or PDF file." : {

    },
    "Error loading feed" : {

    },
    "Error opening book: %@" : {

    },
    "Error: %@" : {

    },
    "Feed" : {

    },
    "Font Size: %lld%%" : {

    },
    "Format" : {

    },
    "Highlight" : {

    },
    "Highlights" : {

    },
    "Importing..." : {

    },
    "Initializing..." : {

    },
    "Language" : {

    },
    "Layout" : {

    },
    "Library" : {

    },
    "Library is Empty" : {

    },
    "Light" : {

    },
    "Loading Feed..." : {

    },
    "Navigation" : {

    },
    "No download available" : {

    },
    "No OPDS Feeds" : {

    },
    "Note" : {

    },
    "Note: %@" : {

    },
    "OK" : {

    },
    "OPDS" : {

    },
    "OPDS Feed" : {

    },
    "OPDS Feeds" : {

    },
    "Open Book" : {

    },
    "Open Feed" : {

    },
    "Open OPDS Feed" : {

    },
    "Opening..." : {

    },
    "Opens a book in the library." : {

    },
    "Opens an OPDS feed." : {

    },
    "Optionally add a note to this highlight." : {

    },
    "Play Audiobook" : {

    },
    "Playback Speed" : {

    },
    "Plays an audiobook from your library." : {

    },
    "Preferences" : {

    },
    "Publications" : {

    },
    "Read Book" : {

    },
    "Retry" : {

    },
    "Save" : {

    },
    "Scroll" : {

    },
    "Search" : {

    },
    "Search Book" : {

    },
    "Search..." : {

    },
    "See All" : {

    },
    "Sepia" : {

    },
    "Setting up..." : {

    },
    "Speed: %@" : {

    },
    "Tabs" : {

    },
    "Text" : {

    },
    "Text to Speech" : {

    },
    "Theme" : {

    },
    "Title" : {

    },
    "URL" : {

    },
    "Voice" : {

    }
  },
  "version" : "1.1"
}